integration_tests/tests/integration_tests/snapshots/integration_tests__search_assets_tests__search_asset_with_token_type_non_fungible.snap
---
source: integration_tests/tests/integration_tests/search_assets_tests.rs
expression: response
---
{
  "total": 2,
  "limit": 2,
  "page": 1,
  "items": [
    {
      "interface": "ProgrammableNFT",
      "id": "8t77ShMViat27Sjphvi1FVPaGrhFcttPAkEnLCFp49Bo",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://cdn.hellomoon.io/public/silicons/metadata/1466.json",
        "files": [],
        "metadata": {
          "name": "SILICON #1466",
          "symbol": "SILI",
          "token_standard": "ProgrammableNonFungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "A2QW89tFNDkkdvJv671tdknAyA21u6hvS7HTUyeMWnf3",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [
        {
          "group_key": "collection",
          "group_value": "HS1oygRKNBG1nMqjSmaBXSQqQ7apWr14gUU4pW3aDMCP"
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.05,
        "basis_points": 500,
        "primary_sale_happened": true,
        "locked": false
      },
      "creators": [
        {
          "address": "8X2e7Lf3wmA9RPHpPH73kmTqqHHyZE9BcED6Y6TWaZCx",
          "share": 0,
          "verified": true
        },
        {
          "address": "5bTgyaCCRNCem3DZXxdRREyesduc6adqwks8rRWGXx8D",
          "share": 100,
          "verified": false
        }
      ],
      "ownership": {
        "frozen": true,
        "delegated": true,
        "delegate": "D98f1ebFe6kfZTcztLo1iPeKAwogbWHAgXzgSpdRDiu7",
        "ownership_model": "single",
        "owner": "2oerfxddTpK5hWAmCMYB6fr9WvNrjEH54CHCWK8sAq7g"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": 252
      },
      "mutable": true,
      "burnt": false,
      "token_info": {
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "mint_authority": "9id1ZxjMiKEAzaEEwwPsjYQ9UinEbyr2UXDv5BfFxcKW",
        "freeze_authority": "9id1ZxjMiKEAzaEEwwPsjYQ9UinEbyr2UXDv5BfFxcKW",
        "balance": 1,
        "associated_token_address": "HboN9TsoMSKJAp388G752pSUscb8iZwgdH459KSJxbZT"
      }
    },
    {
      "interface": "ProgrammableNFT",
      "id": "AH6VcoSbCGGv8BHeN7K766VUWMcdFRTaXpLvGTLSdAmk",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://cdn.hellomoon.io/public/silicons/metadata/4515.json",
        "files": [],
        "metadata": {
          "name": "SILICON #4515",
          "symbol": "SILI",
          "token_standard": "ProgrammableNonFungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "A2QW89tFNDkkdvJv671tdknAyA21u6hvS7HTUyeMWnf3",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [
        {
          "group_key": "collection",
          "group_value": "HS1oygRKNBG1nMqjSmaBXSQqQ7apWr14gUU4pW3aDMCP"
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.05,
        "basis_points": 500,
        "primary_sale_happened": true,
        "locked": false
      },
      "creators": [
        {
          "address": "8X2e7Lf3wmA9RPHpPH73kmTqqHHyZE9BcED6Y6TWaZCx",
          "share": 0,
          "verified": true
        },
        {
          "address": "5bTgyaCCRNCem3DZXxdRREyesduc6adqwks8rRWGXx8D",
          "share": 100,
          "verified": false
        }
      ],
      "ownership": {
        "frozen": true,
        "delegated": true,
        "delegate": "D98f1ebFe6kfZTcztLo1iPeKAwogbWHAgXzgSpdRDiu7",
        "ownership_model": "single",
        "owner": "2oerfxddTpK5hWAmCMYB6fr9WvNrjEH54CHCWK8sAq7g"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": 255
      },
      "mutable": true,
      "burnt": false,
      "token_info": {
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "mint_authority": "HmSYh3H4PyFwQrVt8NxEtt5Pb1UruwUmcXhxU8RTBuxt",
        "freeze_authority": "HmSYh3H4PyFwQrVt8NxEtt5Pb1UruwUmcXhxU8RTBuxt",
        "balance": 1,
        "associated_token_address": "47ackukZJRBkQSufwFnhTkmTzB11Ww8375EDXTwY75wk"
      }
    }
  ]
}
